21.08.19 Fixed input on safari and top row on our-references

--- a/assets/sass/index.sass
+++ b/assets/sass/index.sass
@@ -35,7 +35,7 @@ section:not(.main-screen)
     display: block
 
     .content-top
-      padding-right: 155px
+      padding-right: 200px
 
     .content-main
       margin-bottom: 30px
