--- a/assets/sass/ui-components/text-input.sass
+++ b/assets/sass/ui-components/text-input.sass
@@ -26,6 +26,8 @@ span.error
   transition: opacity .4s
 
 input, textarea
+  border-radius: 0
+  border: none
   display: block
   border: none
   outline: none
